# rumble

./: .gitignore  CLAUDE.md  Cargo.toml  file share prompt.md  implementation-plan.md  threading model.md
crates/api/: Cargo.toml
crates/api/proto/: api.proto
crates/api/src/: lib.rs  types.rs
crates/backend/: Cargo.toml
crates/backend/src/: audio.rs  audio_task.rs  cert_verifier.rs  codec.rs  events.rs  handle.rs  lib.rs  p2p.rs  rpc.rs  torrent.rs
crates/backend/tests/: p2p_file_transfer.rs  p2p_nat_punching.rs
crates/egui-test/: Cargo.toml
crates/egui-test/src/: app.rs  harness.rs  key_manager.rs  lib.rs  main.rs  settings.rs
crates/harness-cli/: Cargo.toml  README.md
crates/harness-cli/src/: daemon.rs  main.rs  protocol.rs  renderer.rs
crates/mumble-bridge/: Cargo.toml
crates/mumble-bridge/proto/: Mumble.proto
crates/mumble-bridge/src/: bridge.rs  main.rs  mumble_framing.rs  mumble_server.rs  mumble_tls.rs  mumble_voice.rs  rumble_client.rs  state.rs
crates/rumble-aetna/: Cargo.toml
crates/rumble-aetna/src/: app.rs  backend.rs  identity.rs  lib.rs  main.rs  password_input.rs  settings.rs  theme.rs  wizard.rs
crates/rumble-audio/: Cargo.toml
crates/rumble-audio/src/: lib.rs
crates/rumble-client/: Cargo.toml
crates/rumble-client-traits/: Cargo.toml
crates/rumble-client-traits/src/: audio.rs  auth.rs  codec.rs  file_transfer.rs  keys.rs  platform.rs  storage.rs  transport.rs
crates/rumble-client/src/: audio.rs  audio_task.rs  cert.rs  cert_verifier.rs  codec.rs  events.rs  file_transfer.rs  handle.rs  keys.rs  lib.rs  platform.rs  rpc.rs  sfx.rs  synth.rs  transport.rs
crates/rumble-client/src/processors/: denoise.rs  gain.rs  mod.rs  vad.rs
crates/rumble-desktop/: Cargo.toml
crates/rumble-desktop-shell/: Cargo.toml
crates/rumble-desktop-shell/src/: lib.rs  settings.rs
crates/rumble-desktop/examples/: list_devices.rs
crates/rumble-desktop/src/: audio.rs  cert_verifier.rs  codec.rs  file_transfer_relay.rs  keys.rs  lib.rs  storage.rs  transport.rs
crates/rumble-egui/: Cargo.toml
crates/rumble-egui/src/: app.rs  first_run.rs  harness.rs  key_manager.rs  lib.rs  main.rs  settings.rs
crates/rumble-egui/tests/: hotkey_tests.rs
crates/rumble-native/: Cargo.toml
crates/rumble-native/src/: audio.rs  cert_verifier.rs  codec.rs  lib.rs  (+5 more)
crates/rumble-next/: Cargo.toml
crates/rumble-next/examples/: screenshot.rs
crates/rumble-next/src/: adapters.rs  app.rs  backend.rs  connect_view.rs  data.rs  harness.rs  identity.rs  lib.rs  main.rs  settings_panel.rs  shell.rs
crates/rumble-next/src/paradigm/: luna.rs  mod.rs  modern.rs  mumble.rs
crates/rumble-next/tests/: chat_image_preview.rs  hit_test_panic_repro.rs
crates/rumble-protocol/: Cargo.toml
crates/rumble-widgets/: Cargo.toml
crates/rumble-widgets/examples/: screenshot.rs
crates/rumble-widgets/src/: combo_box.rs  gallery.rs  group_box.rs  level_meter.rs  lib.rs  luna.rs  modern.rs  mumble.rs  presence.rs  pressable.rs  radio.rs  slider.rs  surface.rs  text_input.rs  theme.rs  toggle.rs  tokens.rs  tree.rs
crates/rumble-widgets/tests/: level_meter_tests.rs  presence_tests.rs  pressable_tests.rs  slider_tests.rs  text_input_tests.rs  toggle_tests.rs  tree_tests.rs
crates/server/: Cargo.toml  rumble-server.toml
docker/backend-p2p-test/: Cargo.toml  Dockerfile  README.md  docker-compose.simple.yml  docker-compose.yml  run-test.sh
docker/backend-p2p-test/src/: test_node.rs
docker/backend-p2p-test/test-files/: test.txt
docker/p2p-test/: Cargo.toml  Dockerfile  README.md  docker-compose.simple.yml  docker-compose.yml  run-test.sh
docker/p2p-test/src/: relay_server.rs  test_node.rs
docker/p2p-test/test-files/: test.txt
docs/: acl-implementation-plan.md  acl-ui-plan.md  hybrid-p2p-requirements.md  p2p-testing.md  rumble-egui-feature-spec.md  rumble-next-bringup.md  test-harness.md  v2-architecture.md  v2-progress.md  wasm-support.md
docs/rumble-egui-feature-spec/: 01-top-level-structure.md  02-lifecycle-identity.md  03-connection.md  04-certificate-trust.md  05-window-layout.md  06-menu-bar.md  07-toolbar.md  08-room-tree.md  09-user-list.md  10-voice-path.md  11-toasts.md  12-chat-panel.md  13-modals.md  14-settings-modal.md  15-settings-connection.md  16-settings-devices.md  17-settings-voice.md  18-settings-sounds.md  19-settings-processing.md  20-settings-encoder.md  21-settings-chat.md  22-settings-file-transfer.md  23-settings-keyboard.md  24-settings-statistics.md  25-settings-admin.md  26-permissions.md  27-sfx.md  28-drag-drop.md  29-persistence.md  30-cli-args.md  31-test-harness.md  32-rpc.md  33-harness-cli.md  34-state-surface.md  35-commands-surface.md  36-rumble-widgets.md  37-known-gaps.md  38-file-reference.md  39-port-plan.md  index.md
scripts/: screenshot_gallery.sh
(+27 files in other folders)
