[package]
name = "rumble-client"
description = "Platform-agnostic Rumble client library"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../api" }
pipeline = { path = "../pipeline" }
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1.19.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
