[package]
name = "rumble-next"
version = "0.1.0"
edition = "2024"

[lib]
name = "rumble_next"
path = "src/lib.rs"

[features]
default = []
# Pulls in egui_kittest so library consumers can drive the GUI
# headlessly. Off by default — production builds don't need it.
test-harness = ["dep:egui_kittest", "dep:image"]

[[bin]]
name = "rumble-next"
path = "src/main.rs"

[dependencies]
eframe = "0.33.3"
rumble-widgets = { path = "../rumble-widgets" }
rumble-client = { path = "../rumble-client" }
rumble-client-traits = { path = "../rumble-client-traits" }
rumble-desktop = { path = "../rumble-desktop" }
rumble-desktop-shell = { path = "../rumble-desktop-shell" }
rumble-protocol = { path = "../rumble-protocol" }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
directories = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
arboard = "3"
rfd = "0.16"
open = "5"
egui_kittest = { version = "0.33", features = ["wgpu", "eframe"], optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[[example]]
name = "screenshot"
path = "examples/screenshot.rs"

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["wgpu", "eframe"] }
image = { version = "0.25", default-features = false, features = ["png"] }
