[package]
name = "rumble-widgets"
version = "0.1.0"
edition = "2024"

[lib]
name = "rumble_widgets"
path = "src/lib.rs"

[[bin]]
name = "gallery"
path = "src/bin/gallery.rs"

[[example]]
name = "screenshot"
path = "examples/screenshot.rs"

[dependencies]
eframe = "0.33.3"

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["wgpu", "eframe"] }
image = { version = "0.25", default-features = false, features = ["png"] }
