[package]
name = "backend-p2p-test"
version = "0.1.0"
edition = "2021"
description = "Docker-based integration test using rumble-client crate for file transfer and NAT traversal"

# Keep this crate out of the parent workspace
[workspace]

[[bin]]
name = "test-node"
path = "src/test_node.rs"

[dependencies]
rumble-client = { path = "../../crates/rumble-client" }
rumble-protocol = { path = "../../crates/rumble-protocol" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
ed25519-dalek = "3.0.0-pre.4"
