[package]
name = "p2p-nat-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relay-server"
path = "src/relay_server.rs"

[[bin]]
name = "test-node"
path = "src/test_node.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.54", features = ["tcp", "tokio", "dns", "noise", "yamux", "ping", "identify", "relay", "request-response", "dcutr", "macros", "quic", "autonat"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
blake3 = "1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
